<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:text="@string/appCode"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        style="@android:style/TextAppearance.Large"
        android:text="@string/appName"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/textAboutVersion"
        android:gravity="right"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/image"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@android:drawable/divider_horizontal_dark"
        android:scaleType="fitXY"
        android:gravity="fill_horizontal"
        android:contentDescription="@string/image"
        />
    <TextView
        android:id="@+id/textAboutMessage"
        android:autoLink="web"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/secondary_text_light"
        />
    </LinearLayout>
</ScrollView>
